**chore: improve test coverage and reliability across event strategies**
- Updated tests to include `Thread.sleep(100)` for ensuring async operations complete before assertions.
- Refactored mocks and injected dependencies for better isolation and maintainability in `EventStrategy` tests.
- Enhanced RabbitMQ, Kafka, and Local Event strategy tests with more realistic scenarios and error handling.
- Changed `@TestConfiguration` to `@SpringBootApplication` in `SimpliXTreeRepositoryTest` for alignment with Spring standards.
- Improved `StandardEnumConverterTest` to include `type` in assertions and increment assertion counts for clarity.